# pacpush

./: Makefile  README.md  pacpush  pacpush-setup  pacpush.conf  pacpush.py  pacsync  pacsync-setup  pyproject.toml  setup.py
pacpush/: __main__.py  pacpush.py
