[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pacpush"
description = "Utility to push an Arch host's package and AUR caches to other hosts"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pacman", "pacserve"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "platformdirs",
  "requests",
  "pyalpm",
]

[[project.authors]]
name = "Mark Blakeney"
email = "mark.blakeney@bullet-systems.net"

[project.urls]
Homepage = "https://github.com/bulletmark/pacpush"

[project.scripts]
pacpush = "pacpush:main"

[project.license]
text = "GPLv3"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.mypy]
implicit_optional = true
warn_no_return = false
allow_untyped_globals = true
allow_redefinition = true

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.edit-lint]
linters = [
  "ruff check",
]

# vim:se sw=2:
